update some paths

--- a/maturity of succession/phi_vary_no_fluc.ipynb
+++ b/maturity of succession/phi_vary_no_fluc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pickle.load(open(\"temp_history.pkl\", \"rb\"))\n",
+    "data = pickle.load(open(\"../data/seq_vs_co_phi/temp_history.pkl\", \"rb\"))\n",
     "t0 = 0.05\n",
     "poolsize = 10000\n",
     "R = 4\n",
